# keyple-card-generic-cpp-lib

./: CMakeLists.txt
src/main/: ApduRequestAdapter.cpp  ApduRequestAdapter.h  CMakeLists.txt  CardSelectorAdapter.cpp  CardSelectorAdapter.h  CardTransactionManager.h  CardTransactionManagerAdapter.cpp  CardTransactionManagerAdapter.h  GenericCardAdapter.cpp  GenericCardAdapter.h  GenericCardSelectionAdapter.cpp  GenericCardSelectionAdapter.h  GenericCardSelectionRequestAdapter.cpp  GenericCardSelectionRequestAdapter.h  GenericExtensionService.cpp  GenericExtensionService.h
